Fix letter spacing

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,6 @@ img.ampersand {
   border-right: 2px solid #a7a7a7;
   margin-right: 5px;
   padding-right: 8px;
-  letter-spacing: 1px;
 }
 
 #hero .ion-chevron-down {
